--- a/BCCK-main/index.html
+++ b/BCCK-main/index.html
@@ -68,7 +68,7 @@
     </section>
 
     
-    <section  id="carousel">
+    <!-- <section  id="carousel">
         <div class="carousel-img">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
@@ -105,7 +105,31 @@
               </div>
         </div>
 
-    </section>
+    </section> -->
+<section id="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/ground8.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/ground4.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/ground11.jpeg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+  </section>  
 
     <!-- Sponsors -->
    <div data-aos="fade-up" class="our-sponsors"> <h3>Our Sponsors</h3></div>
