--- a/BCCK-main/index.html
+++ b/BCCK-main/index.html
@@ -30,7 +30,7 @@
           <div  class="collapse navbar-collapse justify-content-between main-nav" id="navbarCollapse">
               <div class="navbar-nav second-main " >
                  <span id="ho"> <a href="#" class="nav-item nav-link active" class="ho" >Home</a></span>
-                  <a href="team.html" class="nav-item nav-link">Our Team's </a>
+                  <a href="team.html" class="nav-item nav-link">Our Team</a>
                   <a href="about-us.html" class="nav-item nav-link">About Us</a>
                   <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                 
